crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_stmt_single_starred_subject.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_stmt_single_starred_subject.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            9,
        ),
        range: 0..28,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        8,
                    ),
                    range: 0..27,
                    subject: Starred(
                        ExprStarred {
                            node_index: NodeIndex(
                                2,
                            ),
                            range: 6..10,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        1,
                                    ),
                                    range: 7..10,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 16..27,
                            node_index: NodeIndex(
                                7,
                            ),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 21..22,
                                    node_index: NodeIndex(
                                        4,
                                    ),
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(
                                            6,
                                        ),
                                        range: 24..27,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(
                                                    5,
                                                ),
                                                range: 24..27,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match *foo:
  |       ^^^^ Syntax Error: Starred expression cannot be used here
2 |     case _: ...
  |
